fix:form getting clipped on sm/md devices

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ tbody tr th {
   background-color: #ccc;
 }
 /* media query  for the modal to fill on sm devices*/
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   table {
     margin: 0;
   }
